--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
               <form class="col s12">
                 <div class="row">
                   <div class="input-field col s6">
-                    <i class="material-icons prefix">account_circle</i>
-                    <input id="icon_prefix" type="text" class="validate" />
-                    <label for="icon_prefix">First Name</label>
+                    <i class="material-icons prefix">person</i>
+                    <input id="name" type="text" class="validate" />
+                    <label for="name">Name</label>
                   </div>
                   <div class="input-field col s6">
-                    <i class="material-icons prefix">phone</i>
-                    <input id="icon_telephone" type="tel" class="validate" />
-                    <label for="icon_telephone">Telephone</label>
+                    <i class="material-icons prefix">mail</i>
+                    <input id="email" type="email" class="validate" />
+                    <label for="email">Email</label>
                   </div>
-                  <div class="input-field col s6">
+                  <div class="input-field col s12">
                     <i class="material-icons prefix">mode_edit</i>
                     <textarea
-                      id="icon_prefix2"
+                      id="textarea"
                       class="materialize-textarea"
                     ></textarea>
-                    <label for="icon_prefix2">Message</label>
+                    <label for="textarea">Message</label>
                   </div>
                 </div>
               </form>
             </div>
           </div>
           <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat"
+            <a href="#!" class="modal-close waves-effect waves-green btn right"
               >Submit</a
             >
           </div>
